istio-workshop-labs/addons-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: addons-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "dashboard.yxin-hipster-demo.innovlabs.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
    - "dashboard.yxin-hipster-demo.innovlabs.io"
  gateways:
    - addons-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing
spec:
  hosts:
    - "dashboard.yxin-hipster-demo.innovlabs.io"
  gateways:
    - addons-gateway
  http:
    - match:
        - uri:
            prefix: /jaeger
      route:
        - destination:
            host: tracing
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
    - "dashboard.yxin-hipster-demo.innovlabs.io"
  gateways:
    - addons-gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - "dashboard.yxin-hipster-demo.innovlabs.io"
  gateways:
    - addons-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana
            port:
              number: 3000
